--- a/_posts/2019-05-22-embed.md
+++ b/_posts/2019-05-22-embed.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "ESSI Embedding Test"
+title: "Embedding Test"
 date: 2019-05-22
 ---
 <div class="blurb">
@@ -9,5 +9,6 @@ date: 2019-05-22
 </div><!-- /.blurb -->
 
 <div class="blurb">
+	<p>Here is a YouTube video embedded.</p>
 	<iframe width="420" height="315" src="https://www.youtube.com/embed/dqLLiNxxKUI"></iframe>	
 </div>
