Update and rename 2021-08-03-IFS.md to 2021-08-05-IFS.md

--- a/_posts/2021-08-05-IFS.md
+++ b/_posts/2021-08-05-IFS.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Digital Scholarship, Timelines, and Timemaps"
-date: 2021-08-03
+date: 2021-08-05
 ---
 <div class="blurb">
 	<p>Here are some activities we will do today to learn about digital scholarship.</p>
@@ -45,4 +45,21 @@ date: 2021-08-03
 	<p><a href="https://docs.google.com/spreadsheets/d/1LlYBnfhvD3ZUXMGZ8e52UwYp-xn_NeWmaGBx7VBz5V8/edit#gid=0">Here's the spreadsheet template</a>.</p>
 	<p>My example map uses a map I published to my account and embedded on this site. You can get a free account by logging in with your Twitter account. You can also publish anonymously, as long as your Google Sheet is published to the web.</p>
 		<p><a href="http://timemapper.okfnlabs.org/anon/v4dxy1-herman-b-wells-history">Here's the same map as above, published anonymously</a>.</p>
+	<hr/>
+<h2>Activity 4: Retrospective and Project Planning</h2>
+<p>Now we will reflect on what we've done today and review the effort we spent building these miniature research projects.</p>
+	<p>Consider these activities:</p>
+	<ul>
+		<li>Selecting a topic</li>
+		<li>Researching events and locations</li>
+		<li>Finding images</li>
+		<li>Adding your data to Google Spreadsheets</li>
+		<li>Making design decisions</li>
+		<li>Troubleshooting problems</li>
+	</ul>
+	<p>I'd like you to rank each of these activities in two ways:</p>
+	<ol>
+		<li>Order of difficulty: easiest to most difficult</li>
+		<li>Time spent: least time to most time</li>
+	</ol>
 </div><!-- /.blurb -->
